minor refactoring, adopted AoC BOM